[package]
name = "iqos_cli"
version = "1.0.1"
edition = "2021"
rust-version = "1.92"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
btleplug = "0.11"
colored = "3.0"
futures = "0.3"
iqos = { version = "1.1.1", features = ["btleplug-support"] }
rustyline = "11.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
